service worker update: move to new cache

--- a/LocalWorldClock.html
+++ b/LocalWorldClock.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title id="documentTitle">Local World Clock 20211011.2250</title>
+    <title id="documentTitle">Local World Clock 2025-09-09.0750</title>
     <link rel="stylesheet" href="lwc.css" />
     <link rel="icon" type="image/x-icon" href="LWC.ico" />
     <link rel="manifest" href="manifest.json">
