--- a/LocalWorldClock.html
+++ b/LocalWorldClock.html
@@ -18,6 +18,7 @@
     <div id="settings-panel" class="hidden">
       <form onsubmit="addLocation(event)">
         <input type="text" id="newName" placeholder="City Name" required>
+        <span style="color: #266">(LWC 20250909.1915)</span>
         <input type="text" id="newId" placeholder="Timezone ID" required>
         <button type="submit">Add Location</button>
       </form>
