--- a/LocalWorldClock.html
+++ b/LocalWorldClock.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title id="documentTitle">Local World Clock 2025-09-09.1040</title>
+    <title id="documentTitle">Local World Clock 2025-09-10.0945</title>
     <link rel="stylesheet" href="lwc.css" />
     <link rel="icon" type="image/x-icon" href="LWC.ico" />
     <link rel="manifest" href="manifest.json">
@@ -18,8 +18,8 @@
     <div id="settings-panel" class="hidden">
       <form onsubmit="addLocation(event)">
         <input type="text" id="newName" placeholder="City Name" required>
-        <span style="color: #266">(LWC 20250909.1915)</span>
         <input type="text" id="newId" placeholder="Timezone ID" required>
+        <div id="tz-suggestions"></div>
         <button type="submit">Add Location</button>
       </form>
       <p>To reorder, press, hold, and drag. Click "Remove" to show delete buttons.</p>
