--- a/LocalWorldClock.html
+++ b/LocalWorldClock.html
@@ -22,8 +22,7 @@
         <div id="tz-suggestions"></div>
         <button type="submit">Add Location</button>
       </form>
-      <p>To reorder, press, hold, and drag. Click "Remove" to show delete buttons.</p>
-      <button id="edit-button" onclick="toggleEditMode()">Remove</button>
+      <p>To reorder, press, hold, and drag. Click the 'X' button on a clock to remove it.</p>
     </div>
 
     <div id="wc-list">
