--- a/LocalWorldClock.html
+++ b/LocalWorldClock.html
@@ -23,6 +23,10 @@
         <button type="submit">Add Location</button>
       </form>
       <p>To reorder, press, hold, and drag. Click the 'X' button on a clock to remove it.</p>
+      <div class="font-controls">
+        <button onclick="decreaseFontSize()">-</button>
+        <button onclick="increaseFontSize()">+</button>
+      </div>
     </div>
 
     <div id="wc-list">
