Dynamic font second try

--- a/LocalWorldClock.html
+++ b/LocalWorldClock.html
@@ -25,6 +25,7 @@
       <p>To reorder, press, hold, and drag. Click the 'X' button on a clock to remove it.</p>
       <div class="font-controls">
         <button onclick="decreaseFontSize()">-</button>
+        <button onclick="resetFontSize()">Reset</button>
         <button onclick="increaseFontSize()">+</button>
       </div>
     </div>
